<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/nameParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/box_margin_edge"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/user_name"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/poppins"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:textColor="@color/input_text_color"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/emailParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/box_margin_edge"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/poppins"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColor="@color/input_text_color"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/box_margin_edge"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_text_background"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/number"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/codeIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="+91"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/userNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/poppins"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="7dp"
                    android:textColor="@color/input_text_color"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/codePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:ccp_showArrow="false"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/getOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/box_margin_edge"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins"
        android:gravity="bottom|center"
        android:paddingVertical="8dp"
        android:text="@string/generate_otp"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/text_color" />
</LinearLayout>